# prefpo

./: .gitignore  LICENSE  README.md  __init__.py  config.py  generate.py  ifeval_batch.py  optimize.py  progress.py  pyproject.toml
data/: ifeval.py  ifeval_hard.py
examples/: bbh.py  bbh_config.yaml  gsm8k.py  ifbench.py  ifeval_config.yaml  ifeval_hard.py  ifeval_hard_anthropic.py  ifeval_hard_llm_judge.py  test_anthropic_disc.py  test_multitrial.py
examples/seamless/: bbh_binary_exact.py  cli_bbh.py  from_yaml_bbh.py  gemini_provider.py  instruction_llm_judge.py  minimal_instruction_smoke.py  minimal_standalone_smoke.py  optimize_async_direct.py  optimize_multi_trial_direct.py  preflight.py  run_all.py
grading/: __init__.py  base.py  binary.py  exact_match.py  ifeval.py  multiple_choice.py
judges/: hack.py
llm/: client.py
prompts/: discriminator.py  optimizer.py
tests/: test_additional_coverage.py  test_config.py  test_extensive_suite.py  test_generate.py  test_ifeval_grading.py  test_integration.py  test_llm_client.py  test_loop.py  test_multi_provider.py  test_optimize.py  test_prompts.py  test_public_api.py
